--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,8 @@
 COMPOSE_PROJECT_NAME=one_workspace
 LOG_MAX_SIZE=3m
 LOG_MAX_FILE=1
+PROXY_HTTP=""
+PROXY_HTTPS=""
 
 WWW_USER_NAME=user_1
 WWW_USER_PASSWORD=Password1
@@ -27,8 +29,8 @@ NODEJS_ENCRYPTION_SECRET=abcd1234
 NODEJS_ENCRYPTION_KEY=/home/user_1/root/key/encryption.key
 NODEJS_PORT_HTTP=1080
 NODEJS_PORT_HTTPS=1443
-NODEJS_PORT_VUE=10000
-NODEJS_PORT_RANGE=10001-10010
+NODEJS_PORT_VUE=30000
+NODEJS_PORT_RANGE=30001-30010
 NODEJS_DATA_PATH=/home/cimo/One_workspace/data/nodejs
 NODEJS_NETWORK_IP=172.21.0.2
 
