--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
             context: ${PATH_ROOT}/docker
             dockerfile: Dockerfile_nodejs
             args:
+                PROXY_HTTP: ${PROXY_HTTP}
+                PROXY_HTTPS: ${PROXY_HTTPS}
                 WWW_USER_NAME: ${WWW_USER_NAME}
                 WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
                 WEB_PATH: ${WEB_PATH}
@@ -28,6 +30,10 @@ services:
                 NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
                 NODEJS_PORT_RANGE: ${NODEJS_PORT_RANGE}
         environment:
+            PROXY_HTTP: ${PROXY_HTTP}
+            PROXY_HTTPS: ${PROXY_HTTPS}
+            PROXY_HTTP: ${PROXY_HTTP}
+            PROXY_HTTPS: ${PROXY_HTTPS}
             WWW_USER_NAME: ${WWW_USER_NAME}
             WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
             WEB_PATH: ${WEB_PATH}
@@ -71,6 +77,8 @@ services:
             context: ${PATH_ROOT}/docker
             dockerfile: Dockerfile_apache
             args:
+                PROXY_HTTP: ${PROXY_HTTP}
+                PROXY_HTTPS: ${PROXY_HTTPS}
                 WWW_USER_NAME: ${WWW_USER_NAME}
                 WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
                 WEB_USER_GROUP: ${WEB_USER_GROUP}
@@ -90,6 +98,8 @@ services:
                 NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
                 NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
         environment:
+            PROXY_HTTP: ${PROXY_HTTP}
+            PROXY_HTTPS: ${PROXY_HTTPS}
             WWW_USER_NAME: ${WWW_USER_NAME}
             WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
             WEB_USER_GROUP: ${WEB_USER_GROUP}
@@ -127,6 +137,8 @@ services:
             context: ${PATH_ROOT}/docker
             dockerfile: Dockerfile_php
             args:
+                PROXY_HTTP: ${PROXY_HTTP}
+                PROXY_HTTPS: ${PROXY_HTTPS}
                 WWW_USER_NAME: ${WWW_USER_NAME}
                 WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
                 WEB_USER_GROUP: ${WEB_USER_GROUP}
@@ -141,6 +153,8 @@ services:
                 PHP_HOST_XDEBUG: ${PHP_HOST_XDEBUG}
                 PHP_PORT_XDEBUG: ${PHP_PORT_XDEBUG}
         environment:
+            PROXY_HTTP: ${PROXY_HTTP}
+            PROXY_HTTPS: ${PROXY_HTTPS}
             WWW_USER_NAME: ${WWW_USER_NAME}
             WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
             WEB_USER_GROUP: ${WEB_USER_GROUP}
@@ -172,6 +186,8 @@ services:
             context: ${PATH_ROOT}/docker
             dockerfile: Dockerfile_mysql
             args:
+                PROXY_HTTP: ${PROXY_HTTP}
+                PROXY_HTTPS: ${PROXY_HTTPS}
                 WWW_USER_NAME: ${WWW_USER_NAME}
                 WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
                 WEB_USER_GROUP: ${WEB_USER_GROUP}
@@ -184,6 +200,8 @@ services:
                 MYSQL_VERSION: ${MYSQL_VERSION}
                 MYSQL_PORT: ${MYSQL_PORT}
         environment:
+            PROXY_HTTP: ${PROXY_HTTP}
+            PROXY_HTTPS: ${PROXY_HTTPS}
             WWW_USER_NAME: ${WWW_USER_NAME}
             WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
             WEB_USER_GROUP: ${WEB_USER_GROUP}
@@ -213,6 +231,8 @@ services:
             context: ${PATH_ROOT}/docker
             dockerfile: Dockerfile_postgresql
             args:
+                PROXY_HTTP: ${PROXY_HTTP}
+                PROXY_HTTPS: ${PROXY_HTTPS}
                 WWW_USER_NAME: ${WWW_USER_NAME}
                 WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
                 WEB_USER_GROUP: ${WEB_USER_GROUP}
@@ -224,6 +244,8 @@ services:
                 POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
                 POSTGRES_PORT: ${POSTGRES_PORT}
         environment:
+            PROXY_HTTP: ${PROXY_HTTP}
+            PROXY_HTTPS: ${PROXY_HTTPS}
             WWW_USER_NAME: ${WWW_USER_NAME}
             WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
             WEB_USER_GROUP: ${WEB_USER_GROUP}
@@ -252,6 +274,8 @@ services:
             context: ${PATH_ROOT}/docker
             dockerfile: Dockerfile_redis
             args:
+                PROXY_HTTP: ${PROXY_HTTP}
+                PROXY_HTTPS: ${PROXY_HTTPS}
                 WWW_USER_NAME: ${WWW_USER_NAME}
                 WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
                 WEB_USER_GROUP: ${WEB_USER_GROUP}
@@ -262,6 +286,8 @@ services:
                 REDIS_PASSWORD: ${REDIS_PASSWORD}
                 REDIS_PORT: ${REDIS_PORT}
         environment:
+            PROXY_HTTP: ${PROXY_HTTP}
+            PROXY_HTTPS: ${PROXY_HTTPS}
             WWW_USER_NAME: ${WWW_USER_NAME}
             WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
             WEB_USER_GROUP: ${WEB_USER_GROUP}
@@ -289,6 +315,8 @@ services:
             context: ${PATH_ROOT}/docker
             dockerfile: Dockerfile_mongodb
             args:
+                PROXY_HTTP: ${PROXY_HTTP}
+                PROXY_HTTPS: ${PROXY_HTTPS}
                 WWW_USER_NAME: ${WWW_USER_NAME}
                 WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
                 WEB_USER_GROUP: ${WEB_USER_GROUP}
@@ -303,6 +331,8 @@ services:
                 MONGODB_PASSWORD: ${MONGODB_PASSWORD}
                 MONGODB_PORT: ${MONGODB_PORT}
         environment:
+            PROXY_HTTP: ${PROXY_HTTP}
+            PROXY_HTTPS: ${PROXY_HTTPS}
             WWW_USER_NAME: ${WWW_USER_NAME}
             WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
             WEB_USER_GROUP: ${WEB_USER_GROUP}
@@ -334,6 +364,8 @@ services:
             context: ${PATH_ROOT}/docker
             dockerfile: Dockerfile_python
             args:
+                PROXY_HTTP: ${PROXY_HTTP}
+                PROXY_HTTPS: ${PROXY_HTTPS}
                 WWW_USER_NAME: ${WWW_USER_NAME}
                 WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
                 WEB_USER_GROUP: ${WEB_USER_GROUP}
@@ -342,6 +374,8 @@ services:
                 TIMEZONE: ${TIMEZONE}
                 PYTHON_VERSION: ${PYTHON_VERSION}
         environment:
+            PROXY_HTTP: ${PROXY_HTTP}
+            PROXY_HTTPS: ${PROXY_HTTPS}
             WWW_USER_NAME: ${WWW_USER_NAME}
             WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
             WEB_USER_GROUP: ${WEB_USER_GROUP}
