--- a/docker/Dockerfile_apache
+++ b/docker/Dockerfile_apache
@@ -2,6 +2,8 @@ ARG APACHE_VERSION
 
 FROM httpd:${APACHE_VERSION}
 
+ARG PROXY_HTTP
+ARG PROXY_HTTPS
 ARG WWW_USER_NAME
 ARG WWW_USER_PASSWORD
 ARG WEB_USER_GROUP
@@ -20,6 +22,8 @@ ARG PHP_PORT_FPM
 ARG NODEJS_PORT_HTTP
 ARG NODEJS_PORT_HTTPS
 
+ENV http_proxy=${PROXY_HTTP}
+ENV https_proxy=${PROXY_HTTPS}
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
 
