--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -2,6 +2,8 @@ ARG NODEJS_VERSION
 
 FROM node:${NODEJS_VERSION}
 
+ARG PROXY_HTTP
+ARG PROXY_HTTPS
 ARG WWW_USER_NAME
 ARG WWW_USER_PASSWORD
 ARG WEB_PATH
@@ -23,9 +25,11 @@ ARG NODEJS_PORT_HTTPS
 ARG NODEJS_PORT_VUE
 ARG NODEJS_PORT_RANGE
 
-ENV NODE_ENV=${NODEJS_ENV}
+ENV http_proxy=${PROXY_HTTP}
+ENV https_proxy=${PROXY_HTTPS}
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
+ENV NODE_ENV=${NODEJS_ENV}
 
 COPY ${PATH_ROOT}/entrypoint_nodejs.sh /usr/local/bin/entrypoint.sh
 
