--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -2,6 +2,8 @@ ARG PYTHON_VERSION
 
 FROM python:${PYTHON_VERSION}
 
+ARG PROXY_HTTP
+ARG PROXY_HTTPS
 ARG WWW_USER_NAME
 ARG WWW_USER_PASSWORD
 ARG WEB_USER_GROUP
@@ -10,6 +12,8 @@ ARG PATH_ROOT
 ARG TIMEZONE
 ARG PYTHON_PORT
 
+ENV http_proxy=${PROXY_HTTP}
+ENV https_proxy=${PROXY_HTTPS}
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
 
