--- a/system/package.json
+++ b/system/package.json
@@ -9,7 +9,7 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "core-js": "^3.11.1",
+        "core-js": "^3.12.0",
         "socket.io-client": "4.0.0",
         "vue": "^2.6.11",
         "vue-class-component": "^7.2.3",
@@ -30,14 +30,23 @@
         "@vue/cli-service": "^4.5.12",
         "@vue/eslint-config-prettier": "^6.0.0",
         "@vue/eslint-config-typescript": "^5.0.2",
-        "@vue/test-utils": "^1.1.4",
+        "@vue/test-utils": "^1.2.0",
         "eslint": "^6.7.2",
         "eslint-plugin-prettier": "^3.4.0",
         "eslint-plugin-vue": "^6.2.2",
         "prettier": "^1.19.1",
-        "sass": "^1.32.8",
+        "sass": "^1.32.12",
         "sass-loader": "^8.0.2",
         "typescript": "^3.9.3",
         "vue-template-compiler": "^2.6.11"
+    },
+    "gitHooks": {
+        "pre-commit": "lint-staged"
+    },
+    "lint-staged": {
+        "*.{js,jsx,vue,ts,tsx}": [
+            "vue-cli-service lint",
+            "git add"
+        ]
     }
 }
