--- a/docker/.npmrc
+++ b/docker/.npmrc
@@ -1,6 +1,6 @@
-proxy=${PROXY_HTTP}
-http-proxy=${PROXY_HTTP}
-https-proxy=${PROXY_HTTP}
-registry=${NODEJS_REGISTRY}
-strict-ssl=${NODEJS_STRICT_SSL}
-cafile=${PROXY_CERTIFICATE}
+proxy=${HTTP_PROXY}
+http-proxy=${HTTP_PROXY}
+https-proxy=${HTTPS_PROXY}
+registry=${NODE_REGISTRY}
+strict-ssl=${NODE_STRICT_SSL}
+cafile=${NODE_EXTRA_CA_CERTS}
