--- a/env/local.env
+++ b/env/local.env
@@ -3,17 +3,17 @@ COMPOSE_PROJECT_NAME='one_workspace_local'
 
 ENV_NAME='local'
 DOMAIN='localhost'
-PUBLIC_PATH='/'
-DEBUG='true'
-PROXY_HTTP='http://165.225.110.10:80'
-PROXY_HTTPS='http://165.225.110.10:80'
-PROXY_CERTIFICATE='/usr/local/share/ca-certificates/ZscalerRootCa.pem'
-DOCKER_PATH_ROOT='./'
-TIMEZONE='Asia/Tokyo'
 
-NODEJS_VERSION='18.13.0'
-NODEJS_REGISTRY='https://registry.npmjs.org/'
-NODEJS_STRICT_SSL='true'
-NODEJS_ENV='development'
-NODEJS_PORT_HTTPS='1443'
-NODEJS_PORT_RANGE='30000-30100'
+OW_DEBUG='true'
+OW_DOCKER_PATH_ROOT='./'
+OW_TIMEZONE='Asia/Tokyo'
+OW_PROXY_HTTP='http://165.225.110.10:80'
+OW_PROXY_HTTPS='http://165.225.110.10:80'
+OW_PROXY_CERTIFICATE='/usr/local/share/ca-certificates/ZscalerRootCa.pem'
+
+OW_NODEJS_VERSION='18.13.0'
+OW_NODEJS_REGISTRY='https://registry.npmjs.org/'
+OW_NODEJS_STRICT_SSL='true'
+OW_NODEJS_ENV='development'
+OW_NODEJS_PORT_HTTPS='1443'
+OW_NODEJS_PORT_HTTPS_RANGE='30000-30100'
