--- a/env/local.env
+++ b/env/local.env
@@ -15,5 +15,5 @@ OW_NODEJS_VERSION='18.13.0'
 OW_NODEJS_REGISTRY='https://registry.npmjs.org/'
 OW_NODEJS_STRICT_SSL='true'
 OW_NODEJS_ENV='development'
-OW_NODEJS_PORT_HTTPS='1443'
-OW_NODEJS_PORT_HTTPS_RANGE='30000-30100'
+OW_NODEJS_PORT='1443'
+OW_NODEJS_PORT_RANGE='30000-30100'
