--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -14,8 +14,8 @@ ARG PROXY_CERTIFICATE
 ARG NODEJS_REGISTRY
 ARG NODEJS_STRICT_SSL
 ARG NODEJS_ENV
-ARG NODEJS_PORT_HTTPS
-ARG NODEJS_PORT_HTTPS_RANGE
+ARG NODEJS_PORT
+ARG NODEJS_PORT_RANGE
 
 ENV ENV_NAME=${ENV_NAME}
 ENV DOMAIN=${DOMAIN}
@@ -69,4 +69,4 @@ CMD chmod +x /home/root/docker/tls.sh \
     && bash /home/root/docker/tls.sh \
     && tail -f /dev/null
 
-EXPOSE ${NODEJS_PORT_HTTPS} ${NODEJS_PORT_HTTPS_RANGE}
+EXPOSE ${NODEJS_PORT} ${NODEJS_PORT_RANGE}
