--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,14 @@ pnpm-debug.log*
 *.sw?
 
 # cimo +
+.cache/*
+.config/*
+.npm/*
+.pki/*
 certificate/*
+!certificate/**
+certificate/proxy/*
+!certificate/proxy/.gitkeep
 !certificate/.gitkeep
 project/*
 !project/.gitkeep
