--- a/docker/Dockerfile_nodejs_proxy
+++ b/docker/Dockerfile_nodejs_proxy
@@ -7,13 +7,21 @@ ARG _DOMAIN
 ARG _TIMEZONE
 ARG _SERVER_PORT
 ARG _SERVER_PORT_RANGE
+ARG _PROXY_HTTP
+ARG _PROXY_HTTPS
+ARG _PROXY_CERTIFICATE
 
 ENV ENV_NAME=${_ENV_NAME}
 ENV DOMAIN=${_DOMAIN}
 ENV TZ=${_TIMEZONE}
+ENV PROXY_HTTP=${_PROXY_HTTP}
+ENV PROXY_HTTPS=${_PROXY_HTTPS}
+ENV NODE_EXTRA_CA_CERTS=${_PROXY_CERTIFICATE}
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
+
+COPY ./certificate/proxy/* /usr/local/share/ca-certificates/
 
 RUN cd ~ \
     # No root
