--- a/env/local.env
+++ b/env/local.env
@@ -1,19 +1,15 @@
 BUILD_ENV='development'
 COMPOSE_PROJECT_NAME='one_workspace_local'
+DOCKERFILE='Dockerfile_nodejs'
 
 ENV_NAME='local'
 DOMAIN='localhost'
+TIMEZONE='Asia/Tokyo'
+SERVER_PORT='1443'
+SERVER_PORT_RANGE='30000-30100'
+PROXY_HTTP='http://165.225.110.10:80'
+PROXY_HTTPS='http://165.225.110.10:80'
+PROXY_CERTIFICATE='/usr/local/share/ca-certificates/ZscalerRootCa.pem'
 
 OW_DEBUG='true'
-OW_DOCKER_PATH_ROOT='./'
-OW_TIMEZONE='Asia/Tokyo'
-OW_PROXY_HTTP='http://165.225.110.10:80'
-OW_PROXY_HTTPS='http://165.225.110.10:80'
-OW_PROXY_CERTIFICATE='/usr/local/share/ca-certificates/ZscalerRootCa.pem'
-
 OW_NODEJS_VERSION='18.13.0'
-OW_NODEJS_REGISTRY='https://registry.npmjs.org/'
-OW_NODEJS_STRICT_SSL='true'
-OW_NODEJS_ENV='development'
-OW_NODEJS_PORT='1443'
-OW_NODEJS_PORT_RANGE='30000-30100'
