--- a/env/local.env
+++ b/env/local.env
@@ -2,6 +2,7 @@ BUILD_ENV='development'
 COMPOSE_PROJECT_NAME='one_workspace_local'
 DOCKERFILE='Dockerfile_nodejs'
 
+NODEJS_VERSION='18.16.0'
 ENV_NAME='local'
 DOMAIN='localhost'
 TIMEZONE='Asia/Tokyo'
