--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -23,9 +23,11 @@ RUN cd ~ \
     # Apt
     && apt-get update && apt-get install -y \
     ca-certificates \
+    fonts-noto \
+    fonts-noto-cjk \
     # Certificate
     && update-ca-certificates \
-    # Log
+    # Tls
     && mkdir -p /var/log/one_workspace/ \
     && chown -R node:node /var/log/one_workspace/ \
     && chmod 775 /var/log/one_workspace/ \
