--- a/docker/Dockerfile_nodejs_proxy
+++ b/docker/Dockerfile_nodejs_proxy
@@ -31,6 +31,8 @@ RUN cd ~ \
     # Apt
     && apt-get update && apt-get install -y \
     ca-certificates \
+    fonts-noto \
+    fonts-noto-cjk \
     # Certificate
     && update-ca-certificates \
     # Tls
