--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ pnpm-debug.log*
 # cimo +
 .cache/*
 .config/*
+.local/*
 .npm/*
 .pki/*
 certificate/*
@@ -23,5 +24,7 @@ certificate/*
 !certificate/.gitkeep
 certificate/proxy/*
 !certificate/proxy/.gitkeep
+env/*
+!env/local.env.public
 project/*
 !project/.gitkeep
