--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -14,19 +14,23 @@ ENV TZ=${_TIMEZONE}
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
+ENV NODE_OPTIONS=--use-openssl-ca
+
+COPY ./certificate/proxy/ /usr/local/share/ca-certificates/
 
 RUN cd ~ \
+    && chmod -R 0644 /usr/local/share/ca-certificates/ \
+    && apt-get update && apt-get install -y ca-certificates gnupg curl \
+    && update-ca-certificates \
     # No root
     && mkdir -p /home/root/ /usr/local/lib/node_modules/ \
     && chown -R node:node /home/root/ /usr/local/lib/node_modules/ /usr/local/bin/ \
     && chmod 775 /home/root/ /usr/local/lib/node_modules/ /usr/local/bin/ \
     # Apt
     && apt-get update && apt-get install -y \
-    ca-certificates \
     fonts-noto \
     fonts-noto-cjk \
-    # Certificate
-    && update-ca-certificates \
+    libxtst-dev \
     # Tls
     && mkdir -p /var/log/one_workspace/ \
     && chown -R node:node /var/log/one_workspace/ \
