--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -15,6 +15,9 @@ ENV TZ=${_TIMEZONE}
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
 ENV NODE_OPTIONS=--use-openssl-ca
+ENV WINEDLLOVERRIDES="mscoree,mshtml="
+ENV WINEDEBUG="fixme-all"
+ENV WINEARCH=win64
 
 COPY ./certificate/proxy/ /usr/local/share/ca-certificates/
 
@@ -23,14 +26,30 @@ RUN cd ~ \
     && apt-get update && apt-get install -y ca-certificates gnupg curl \
     && update-ca-certificates \
     # No root
+    && dpkg --add-architecture i386 \
     && mkdir -p /home/root/ /usr/local/lib/node_modules/ \
     && chown -R node:node /home/root/ /usr/local/lib/node_modules/ /usr/local/bin/ \
     && chmod 775 /home/root/ /usr/local/lib/node_modules/ /usr/local/bin/ \
+    # WineHq
+    && mkdir -p /etc/apt/keyrings/ \
+    && curl -fsSL https://dl.winehq.org/wine-builds/winehq.key --output /etc/apt/keyrings/winehq-archive.key \
+    && curl -fsSL https://dl.winehq.org/wine-builds/ubuntu/dists/jammy/winehq-jammy.sources --output /etc/apt/sources.list.d/winehq-jammy.sources \
+    # X11
+    && echo "export DISPLAY=:0.0" >> /home/node/.bashrc \
+    && echo "export LIBGL_ALWAYS_INDIRECT=true" >> /home/node/.bashrc \
+    && echo "export DBUS_SYSTEM_BUS_ADDRESS='unix:path=/var/run/dbus/system_bus_socket'" >> /home/node/.bashrc \
+    && echo "export DBUS_SESSION_BUS_ADDRESS='unix:path=/var/run/dbus/system_bus_socket'" >> /home/node/.bashrc \
+    && mkdir -p /run/user/1000/ /run/dbus/ \
+    && chown node:root /run/user/1000/ /run/dbus/ \
     # Apt
-    && apt-get update && apt-get install -y \
+    && apt-get update && apt-get install -y --install-recommends \
     fonts-noto \
     fonts-noto-cjk \
-    libxtst-dev \
+    winehq-stable \
+    libnss3-dev \
+    libgdk-pixbuf2.0-dev \
+    libgtk-3-dev \
+    libxss-dev \
     # Tls
     && mkdir -p /var/log/one_workspace/ \
     && chown -R node:node /var/log/one_workspace/ \
@@ -48,6 +67,8 @@ WORKDIR /home/root/
 # Tls
 CMD chmod +x /home/root/docker/tls.sh \
     && bash /home/root/docker/tls.sh \
+    # X11
+    && dbus-daemon --config-file=/usr/share/dbus-1/system.conf --print-address \
     # Keep running
     && tail -f /dev/null
 
