--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
         _TIMEZONE: ${TIMEZONE}
         _SERVER_PORT: ${SERVER_PORT}
         _SERVER_PORT_RANGE: ${SERVER_PORT_RANGE}
+        _NODE_EXTRA_CA_CERTS: ${NODE_EXTRA_CA_CERTS}
     env_file:
       - ./env/local.env
     ports:
