--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -7,6 +7,7 @@ ARG _DOMAIN
 ARG _TIMEZONE
 ARG _SERVER_PORT
 ARG _SERVER_PORT_RANGE
+ARG _NODE_EXTRA_CA_CERTS
 
 ENV ENV_NAME=${_ENV_NAME}
 ENV DOMAIN=${_DOMAIN}
@@ -15,6 +16,7 @@ ENV TZ=${_TIMEZONE}
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
 ENV NODE_OPTIONS=--use-openssl-ca
+ENV NODE_EXTRA_CA_CERTS=${_NODE_EXTRA_CA_CERTS}
 ENV WINEDLLOVERRIDES="mscoree,mshtml="
 ENV WINEDEBUG="fixme-all"
 ENV WINEARCH=win64
@@ -51,6 +53,7 @@ RUN cd ~ \
     libgtk-3-dev \
     libxss-dev \
     libxtst-dev \
+    libxkbcommon-x11-0 \
     # Tls
     && mkdir -p /var/log/one_workspace/ \
     && chown -R node:node /var/log/one_workspace/ \
