--- a/.gitignore
+++ b/.gitignore
@@ -20,11 +20,17 @@ pnpm-debug.log*
 .npm/*
 .pki/*
 certificate/*
-!certificate/**/
 !certificate/.gitkeep
-certificate/proxy/*
 !certificate/proxy/.gitkeep
-env/*
-!env/local.env.public
+dist/*
+public/js/*
+public/style/*
+!public/style/.gitkeep
+public/index.html
+node_modules
+package-lock.json
+# ---
+log/*
+!log/.gitkeep
 project/*
 !project/.gitkeep
