--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -26,7 +26,7 @@ RUN cd ~ \
     && apt-get update && apt-get install -y ca-certificates gnupg curl \
     && update-ca-certificates \
     # No root
-    && mkdir -p /home/root/ /usr/local/lib/node_modules/ \
+    && mkdir -p /home/root/ /usr/local/lib/node_modules/ /usr/local/bin/ \
     && chown -R node:node /home/root/ /usr/local/lib/node_modules/ /usr/local/bin/ \
     && chmod 775 /home/root/ /usr/local/lib/node_modules/ /usr/local/bin/ \
     # WineHq
@@ -51,10 +51,6 @@ RUN cd ~ \
     libgtk-3-dev \
     libxss-dev \
     libxtst-dev \
-    # Tls
-    && mkdir -p /var/log/one_workspace/ \
-    && chown -R node:node /var/log/one_workspace/ \
-    && chmod 775 /var/log/one_workspace/ \
     # Clean
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean -y \
