--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,25 @@
     "[javascript]": {
         "editor.formatOnSave": false
     },
+    "[html]": {
+        "editor.defaultFormatter": "vscode.html-language-features"
+    },
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
-    }
+    },
+    "l13Diff.exclude": [
+        ".git",
+        ".cache",
+        ".config",
+        ".local",
+        ".npm",
+        ".pki",
+        "node_modules",
+        "log",
+        "dist"
+    ],
+    "l13Diff.ignoreEndOfLine": false,
+    "l13Diff.ignoreTrimWhitespace": "default",
+    "l13Diff.ignoreByteOrderMark": false,
+    "diffEditor.ignoreTrimWhitespace": false
 }
