--- a/env/local.env
+++ b/env/local.env
@@ -1,6 +1,7 @@
 BUILD_ENV='development'
 COMPOSE_PROJECT_NAME='one_workspace_local'
 DOCKERFILE='Dockerfile_nodejs'
+DISPLAY=':0'
 
 ENV_NAME='local'
 DOMAIN='localhost'
