--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -5,8 +5,8 @@ FROM node:${_NODEJS_VERSION}
 ARG _ENV_NAME
 ARG _DOMAIN
 ARG _TIMEZONE
-ARG _SERVER_PORT
-ARG _SERVER_PORT_RANGE
+ARG _NODEJS_SERVER_PORT
+ARG _NODEJS_SERVER_PORT_RANGE
 
 ENV ENV_NAME=${_ENV_NAME}
 ENV DOMAIN=${_DOMAIN}
@@ -54,4 +54,4 @@ CMD chmod +x /home/root/docker/tls.sh \
     # Keep running
     && tail -f /dev/null
 
-EXPOSE ${_SERVER_PORT} ${_SERVER_PORT_RANGE}
+EXPOSE ${_NODEJS_SERVER_PORT} ${_NODEJS_SERVER_PORT_RANGE}
