--- a/env/local.env
+++ b/env/local.env
@@ -1,12 +1,14 @@
 BUILD_ENV='development'
 COMPOSE_PROJECT_NAME='one_workspace_local'
-DOCKERFILE='Dockerfile_nodejs'
 DISPLAY=':0'
 
 ENV_NAME='local'
 DOMAIN='localhost'
 TIMEZONE='Asia/Tokyo'
-SERVER_PORT='1443'
-SERVER_PORT_RANGE='30000-30100'
 
-NODEJS_VERSION='18.19.0'
+NODEJS_VERSION='20.16.0'
+NODEJS_SERVER_PORT='1443'
+NODEJS_SERVER_PORT_RANGE='30000-30100'
+
+PYTHON_VERSION='3.12.5'
+PYTHON_JUPYTER_PORT='8888'
