--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,41 @@
 version: "3.8"
 services:
-  one_workspace:
-    container_name: one-workspace
+  ow_nodejs:
+    container_name: ow-nodejs
     build:
       context: ./
-      dockerfile: ./docker/${DOCKERFILE}
+      dockerfile: ./docker/Dockerfile_nodejs
       args:
         _ENV_NAME: ${ENV_NAME}
         _DOMAIN: ${DOMAIN}
         _TIMEZONE: ${TIMEZONE}
-        _SERVER_PORT: ${SERVER_PORT}
-        _SERVER_PORT_RANGE: ${SERVER_PORT_RANGE}
+        _NODEJS_SERVER_PORT: ${NODEJS_SERVER_PORT}
+        _NODEJS_SERVER_PORT_RANGE: ${NODEJS_SERVER_PORT_RANGE}
         _NODEJS_VERSION: ${NODEJS_VERSION}
     env_file:
       - ./env/local.env
     ports:
-      - 127.0.0.1:${SERVER_PORT}:${SERVER_PORT}
-      - 127.0.0.1:${SERVER_PORT_RANGE}:${SERVER_PORT_RANGE}
+      - 127.0.0.1:${NODEJS_SERVER_PORT}:${NODEJS_SERVER_PORT}
+      - 127.0.0.1:${NODEJS_SERVER_PORT_RANGE}:${NODEJS_SERVER_PORT_RANGE}
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./:/home/root/
+      - /tmp/.X11-unix:/tmp/.X11-unix
+  ow_python:
+    container_name: ow-python
+    build:
+      context: ./
+      dockerfile: ./docker/Dockerfile_python
+      args:
+        _ENV_NAME: ${ENV_NAME}
+        _DOMAIN: ${DOMAIN}
+        _TIMEZONE: ${TIMEZONE}
+        _PYTHON_VERSION: ${PYTHON_VERSION}
+        _PYTHON_JUPYTER_PORT: ${PYTHON_JUPYTER_PORT}
+    env_file:
+      - ./env/local.env
+    ports:
+      - 127.0.0.1:${PYTHON_JUPYTER_PORT}:${PYTHON_JUPYTER_PORT}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./:/home/root/
