--- a/env/local.env
+++ b/env/local.env
@@ -8,7 +8,10 @@ TIMEZONE='Asia/Tokyo'
 
 NODEJS_VERSION='20.16.0'
 NODEJS_SERVER_PORT='1443'
-NODEJS_SERVER_PORT_RANGE='30000-30100'
+NODEJS_SERVER_PORT_RANGE='30000-30005'
 
 PYTHON_VERSION='3.12.5'
 PYTHON_JUPYTER_PORT='8888'
+
+APACHE_VERSION='2.4.62'
+APACHE_SERVER_PORT='8443'
