--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,9 +9,9 @@ services:
         _ENV_NAME: ${ENV_NAME}
         _DOMAIN: ${DOMAIN}
         _TIMEZONE: ${TIMEZONE}
+        _NODEJS_VERSION: ${NODEJS_VERSION}
         _NODEJS_SERVER_PORT: ${NODEJS_SERVER_PORT}
         _NODEJS_SERVER_PORT_RANGE: ${NODEJS_SERVER_PORT_RANGE}
-        _NODEJS_VERSION: ${NODEJS_VERSION}
     env_file:
       - ./env/local.env
     ports:
@@ -40,3 +40,26 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./:/home/root/
       - /tmp/.X11-unix:/tmp/.X11-unix
+    depends_on:
+      - ow_nodejs
+  ow_apache:
+    container_name: ow-apache
+    build:
+      context: ./
+      dockerfile: ./docker/Dockerfile_apache
+      args:
+        _ENV_NAME: ${ENV_NAME}
+        _DOMAIN: ${DOMAIN}
+        _TIMEZONE: ${TIMEZONE}
+        _APACHE_VERSION: ${APACHE_VERSION}
+        _APACHE_SERVER_PORT: ${APACHE_SERVER_PORT}
+    env_file:
+      - ./env/local.env
+    ports:
+      - 127.0.0.1:443:${APACHE_SERVER_PORT}
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./:/home/root/
+      - /tmp/.X11-unix:/tmp/.X11-unix
+    depends_on:
+      - ow_nodejs
