--- a/docker/apache_httpd.conf
+++ b/docker/apache_httpd.conf
@@ -6,6 +6,7 @@ LoadModule unixd_module modules/mod_unixd.so
 LoadModule status_module modules/mod_status.so
 LoadModule ssl_module modules/mod_ssl.so
 LoadModule dir_module modules/mod_dir.so
+LoadModule rewrite_module modules/mod_rewrite.so
 
 Listen 80
 Listen ${_APACHE_SERVER_PORT}
@@ -46,7 +47,14 @@ SSLSessionCacheTimeout 300
         AllowOverride All
         Require all granted
 
-        DirectoryIndex index.html
+        RewriteEngine On
+        RewriteBase /
+        RewriteRule ^index\.html$ - [L]
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteRule . /index.html [L]
+
+        DirectoryIndex index.html index.php
     </Directory>
 
     ErrorLog /usr/local/apache2/logs/error_log
