--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -5,19 +5,22 @@ FROM python:${_PYTHON_VERSION}
 ARG _ENV_NAME
 ARG _DOMAIN
 ARG _TIMEZONE
+ARG _PATH_ROOT
 ARG _PYTHON_JUPYTER_PORT
 
 ENV ENV_NAME=${_ENV_NAME}
 ENV DOMAIN=${_DOMAIN}
 ENV TZ=${_TIMEZONE}
+ENV PATH_ROOT=${_PATH_ROOT}
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
-ENV PATH="${PATH}:/home/root/.local/bin/:/root/.local/bin/"
-ENV PYTHONPATH="/home/root/"
+ENV PATH="${PATH}:${PATH_ROOT}.local/bin/:/root/.local/bin/"
+ENV PYTHONPATH="${PATH_ROOT}"
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PIP_DISABLE_PIP_VERSION_CHECK=1
+ENV SUDO_FORCE_REMOVE=yes
 
 COPY ./certificate/proxy/ /usr/local/share/ca-certificates/
 
@@ -28,10 +31,10 @@ RUN cd ~ \
     && update-ca-certificates \
     # No root
     && groupadd -g 1000 pyuser \
-    && useradd -d /home/root/ -s /bin/bash -u 1000 -g 1000 pyuser \
-    && mkdir -p /home/root/ \
-    && chown -R pyuser:pyuser /home/root/ \
-    && chmod -R 775 /home/root/ \
+    && useradd -d ${PATH_ROOT} -s /bin/bash -u 1000 -g 1000 pyuser \
+    && mkdir -p ${PATH_ROOT} \
+    && chown -R pyuser:pyuser ${PATH_ROOT} \
+    && chmod -R 775 ${PATH_ROOT} \
     # Apt
     && apt-get update && apt-get install -y \
     fonts-noto \
@@ -44,11 +47,11 @@ RUN cd ~ \
 
 USER pyuser
 
-WORKDIR /home/root/
+WORKDIR ${PATH_ROOT}
 
 # Pip
 CMD python3 -m pip install pip --upgrade \
-    && python3 -m pip install --user --trusted-host pypi.python.org --trusted-host files.pythonhosted.org --trusted-host pypi.org -r /home/root/docker/python_requirements.txt \
+    && python3 -m pip install --user --trusted-host pypi.python.org --trusted-host files.pythonhosted.org --trusted-host pypi.org -r ${PATH_ROOT}docker/python_requirements.txt \
     # Jupyter lab
     && jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --NotebookApp.token='' --NotebookApp.password=''
 
