--- a/docker/apache_httpd.conf
+++ b/docker/apache_httpd.conf
@@ -37,12 +37,12 @@ SSLSessionCacheTimeout 300
 
 <VirtualHost *:${_APACHE_SERVER_PORT}>
     SSLEngine on
-    SSLCertificateFile "/home/root/certificate/tls.crt"
-    SSLCertificateKeyFile "/home/root/certificate/tls.key"
+    SSLCertificateFile "${_PATH_ROOT}certificate/tls.crt"
+    SSLCertificateKeyFile "${_PATH_ROOT}certificate/tls.key"
 
-    DocumentRoot /home/root/project/jsmvcfw_app/root/public/
+    DocumentRoot ${_PATH_ROOT}project/jsmvcfw_app/root/public/
 
-    <Directory "/home/root/project/jsmvcfw_app/root/public/">
+    <Directory "${_PATH_ROOT}project/jsmvcfw_app/root/public/">
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
