--- a/env/local.env
+++ b/env/local.env
@@ -5,6 +5,7 @@ DISPLAY=':0'
 ENV_NAME='local'
 DOMAIN='localhost'
 TIMEZONE='Asia/Tokyo'
+PATH_ROOT='/home/root/'
 
 NODEJS_VERSION='20.16.0'
 NODEJS_SERVER_PORT='1443'
