--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -5,6 +5,7 @@ FROM node:${_NODEJS_VERSION}
 ARG _ENV_NAME
 ARG _DOMAIN
 ARG _TIMEZONE
+ARG _SERVER_LOCATION
 ARG _PATH_ROOT
 ARG _NODEJS_SERVER_PORT
 ARG _NODEJS_SERVER_PORT_RANGE
@@ -12,6 +13,7 @@ ARG _NODEJS_SERVER_PORT_RANGE
 ENV ENV_NAME=${_ENV_NAME}
 ENV DOMAIN=${_DOMAIN}
 ENV TZ=${_TIMEZONE}
+ENV SERVER_LOCATION=${_SERVER_LOCATION}
 ENV PATH_ROOT=${_PATH_ROOT}
 
 ENV DEBIAN_FRONTEND=noninteractive
