--- a/docker/Dockerfile_python
+++ b/docker/Dockerfile_python
@@ -5,12 +5,14 @@ FROM python:${_PYTHON_VERSION}
 ARG _ENV_NAME
 ARG _DOMAIN
 ARG _TIMEZONE
+ARG _SERVER_LOCATION
 ARG _PATH_ROOT
 ARG _PYTHON_JUPYTER_PORT
 
 ENV ENV_NAME=${_ENV_NAME}
 ENV DOMAIN=${_DOMAIN}
 ENV TZ=${_TIMEZONE}
+ENV SERVER_LOCATION=${_SERVER_LOCATION}
 ENV PATH_ROOT=${_PATH_ROOT}
 
 ENV DEBIAN_FRONTEND=noninteractive
